--- a/public/css/main.css
+++ b/public/css/main.css
@@ -201,6 +201,12 @@ tbody tr:nth-child(even) {
     background-color: #f0e6eb;
 }
 
+.sessiondate, .sessiontutors {
+    font-weight: bold;
+    font-size: 1.2em;
+    padding-bottom: 10px;
+}
+
 @media only screen and (max-width: 800px) {
     #container {
         display: block;
