New Google Analytics code.

--- a/themes/bbkweb/layouts/slides/baseof.html
+++ b/themes/bbkweb/layouts/slides/baseof.html
@@ -28,5 +28,6 @@
             {{ block "main" . }}{{ end }}
             <div class="slide"></div>
         </div>
+        {{ partial "analytics.html" }}
     </body>
 </html>
