--- a/themes/bbkweb/layouts/_default/baseof.html
+++ b/themes/bbkweb/layouts/_default/baseof.html
@@ -53,10 +53,6 @@
         <script>window.jQuery || document.write('<script src="/js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
         <script src="/js/plugins.js"></script>
         <script src="/js/main.js"></script>
-        <script>
-            window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
-            ga('create','UA-108227869-1','auto');ga('send','pageview')
-        </script>
-        <script src="https://www.google-analytics.com/analytics.js" async defer></script>
+        {{ partial "analytics.html" }}
     </body>
 </html>
